org.metaborg.lang.tiger.example/examples/type-dec.tig
let
  type foo = int
  function foo(x : int) : int = 3 
  var foo : foo := foo(4)
 in foo(56)  + foo  // error: both refer to the variable foo
 
 
end 
